--- a/대바늘.HTML
+++ b/대바늘.HTML
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<title>그녀의 손뜨개</title>
-<meta charset="utf-8"
+<title>대바늘 기초</title>
+<meta charset="utf-8">
 </head>
 <body>
 <ol>
@@ -12,9 +12,10 @@
   <li><a href="코바늘.html">코바늘</a></li>
   <li><a href="아후강.html">아후강</a></li>
 </ol>
+
 <h2>대바늘 編</h2>
 <br><a href="http://mjhong.com/110044843031"
-target="_blank" title="mj홍의 블로그">
+target="_blank" title="대바늘 뜨기의 기초">
 <strong>대바늘 기호와 뜨는 법</a></strong>
 <br><br>
 <p>대바늘뜨기는 가장 많이 하는 뜨개질 방법이다.<br>
@@ -23,7 +24,7 @@ target="_blank" title="mj홍의 블로그">
   또한 코를 의도적으로 비우는 방식으로 <strong>레이스 편물</strong>을 뜨기도 하며,<br>
   이들 방식을 응용하여 각종 무늬의 뜨개질을 한다.<br>
   굵은 대바늘로는 보통 <strong>목도리</strong>, <strong>스웨터</strong>, <strong>모자</strong>, <strong>장갑</strong> 등을 만들 때 편리하다.</p>
-<img src="엮음무늬1.jpg" width="400">
+<img src="배색꽈배기1.jpg" width="400">
 <p>손 땀이 예쁜</p><p>그녀의 손뜨개</p>
 </body>
 </html>
