--- a/아후강.HTML
+++ b/아후강.HTML
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<title>그녀의 손뜨개</title>
-<meta charset="utf-8"
+<title>아후강 기초</title>
+<meta charset="utf-8">
 </head>
 <body>
 <ol>
@@ -14,7 +14,7 @@
 </ol>
 <h2>아후강 編</h2>
 <br><a href="http://mjhong.com/110080426743"
-target="_blank" title="mj홍의 블로그">
+target="_blank" title="아후강 뜨기의 기초">
 <strong>아후강 기호와 뜨는 방법</a></strong>
 <br><br>
 <p>아후강(아프간)뜨기는 대바늘뜨기와 코바늘뜨기가 혼용된 방식으로,<br>
