--- a/코바늘.HTML
+++ b/코바늘.HTML
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<title>그녀의 손뜨개</title>
-<meta charset="utf-8"
+<title>코바늘 기초</title>
+<meta charset="utf-8">
 </head>
 <body>
 <ol>
@@ -14,7 +14,7 @@
 </ol>
 <h2>코바늘 編</h2>
 <br><a href="http://mjhong.com/110044876962"
-target="_blank" title="mj홍의 블로그">
+target="_blank" title="코바늘 뜨기의 기초">
 <strong>코바늘 기호와 뜨는 법</a></strong>
 <br><br>
 <p>코바늘뜨기는 <strong>사슬뜨기·짧은뜨기·긴뜨기·걸어뜨기</strnog> 등의 기본 방식으로 뜨개질을 한다.<br>
